Added note creation with pagination